# glucose-prediction

./: .pre-commit-config.yaml  README.md  env.yaml  mkdocs.yml  pyproject.toml  setup.cfg
.github/workflows/: publish.yml  test_suite.yml
conf/: default.yaml
conf/nn/: default.yaml
conf/nn/data/: default.yaml  glucose_data.yaml
conf/nn/data/dataset/csv/: replace_bg.yaml
conf/nn/data/dataset/vision/: mnist.yaml
conf/nn/module/: default.yaml  glucose_module.yaml
conf/nn/module/model/: attention.yaml  cnn.yaml  cnn_lstm.yaml
conf/train/: default.yaml
src/glucose_prediction/: preprocessing.ipynb  run.py
src/glucose_prediction/data/: glucose_datamodule.py  replace_bg_dataset.py
src/glucose_prediction/modules/: attention.py  cnn_lstm.py
src/glucose_prediction/pl_modules/: glucose_module.py  pl_module.py
src/glucose_prediction/ui/: run.py
tests/: conftest.py  test_checkpoint.py  test_configuration.py  test_resume.py
